# btc-collider-rs

./: .gitignore  Cargo.toml  README.md  collisions.sh
addresses/wif/: readme.md
benches/: collider.rs
searchspace/: space.merge.txt  space.txt  space.update.txt
src/: address_file.rs  btc_address.rs  collider.rs  hash_util.rs  key_util.rs  lib.rs  main.rs  wif.rs
src/search_space/: file_search_space_provider.rs  mod.rs  puzzle_search_space_provider.rs  random_search_space_provider.rs
test/: space.existing.txt  space.update.txt
