[package]
name = "btc-collider-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bech32 = "0.8"
bs58 = "0.4"
chrono = "0.4"
clap = { version = "3.1.8", features = ["derive"] }
flate2 = "1.0"
log = "0.4"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num_cpus = "1.13"
primitive-types = "0.11.1"
rand = "0.8"
ripemd = "0.1"
secp256k1 = "0.22"
sha2 = "0.10"
simplelog = "0.11"

[dev-dependencies]
parameterized-macro = "0.3.1"
