[package]
name = "btc-collider-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bech32 = "0.9"
bs58 = "0.5"
chrono = "0.4"
clap = { version = "4.3", features = ["derive"] }
flate2 = "1.0"
hashbrown = "0.14"
log = "0.4"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num_cpus = "1.16"
primitive-types = "0.12"
rand = "0.8"
ripemd = "0.1"
secp256k1 = "0.27"
sha2 = "0.10"
simplelog = "0.12"

[dev-dependencies]
parameterized-macro = "1.0"
criterion = "0.5"

[[bench]]
name = "collider"
harness = false
